[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainScreen/Menu/MenuBG.png" type="Texture" id=1]
[ext_resource path="res://Font/Dancing Minotaur.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainScreen/Menu/UI/Panel_2.png" type="Texture" id=3]
[ext_resource path="res://MainScreen/Menu/MenuScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 296.0
margin_top = 387.0
margin_right = 418.0
margin_bottom = 444.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="TextureButton" parent="."]
margin_left = 277.0
margin_top = 455.0
margin_right = 449.0
margin_bottom = 494.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 294.0
margin_top = 509.0
margin_right = 427.0
margin_bottom = 548.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_Controls" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.462745, 0, 0.537255, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 280.0
margin_top = 280.0
margin_right = 280.0
margin_bottom = 280.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="Label" parent="Panel_Controls"]
margin_left = 110.0
margin_top = 210.0
margin_right = 221.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 1 )
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RIGHT" type="Label" parent="Panel_Controls"]
margin_left = 410.0
margin_top = 210.0
margin_right = 570.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 1 )
text = "RIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JUMP" type="Label" parent="Panel_Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_top = 137.0
margin_right = -128.0
margin_bottom = 202.0
custom_fonts/font = SubResource( 1 )
text = "JUMP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Panel_Controls"]
modulate = Color( 0.286275, 0.545098, 1, 1 )
margin_left = 121.0
margin_top = 62.0
margin_right = 203.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Panel_Controls/OK" to="." method="_on_OK_pressed"]
